html: Fix firefox editor size
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/html/index.html
+++ b/html/index.html
@@ -203,6 +203,9 @@
             if (buildInfo) {
                 populateBuildInfo(buildInfo)
             }
+
+            // Resize editor
+            resizeSplitX()
         }
 
         function share() {
