html: index: Open build commit in new tab
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="build-info" style="cursor:pointer">
-            <a id="build-info" href="https://invent.kde.org/webapps/qmlonline" style="color:white"></a>
+            <a id="build-info" target="_blank" href="https://invent.kde.org/webapps/qmlonline" style="color:white"></a>
         </div>
 
         <div class="github-button" onclick="window.open('https://invent.kde.org/webapps/qmlonline');">
